--- a/index.html
+++ b/index.html
@@ -132,35 +132,153 @@
         <div class="main-content">
           <div class="feature-body">
             <span class="mini-summary">F E A T U R E S</span>
-            <h2 class="title lv2">
+            <h2 class="title-lv2">
               We are providing suitable features for students.
             </h2>
-            <p class="desc">
+            <p class="desc desc-feature">
               Read our awesome feature that is absolutely suit for you. Explore
               the feature and know the best.
             </p>
-            <div class="detail-feature">
-              <img src="" alt="" class="icon-feature" />
-              <h3 class="title-lv3">Live Class</h3>
-              <p class="desc">
-                We are providing live classes with the best teacher for you
-              </p>
+            <div class="feature-list">
+              <div class="detail-feature">
+                <img
+                  src="/asset/icon/icon-feature-1.svg"
+                  alt="icon Live Class"
+                  class="icon-feature"
+                />
+                <h3 class="title-lv3">Live Class</h3>
+                <p class="desc desc-item">
+                  We are providing live classes with the best teacher for you
+                </p>
+              </div>
+              <div class="detail-feature">
+                <img
+                  src="/asset/icon/icon-feature-2.svg"
+                  alt="icon Discuss"
+                  class="icon-feature"
+                />
+                <h3 class="title-lv3">Discuss</h3>
+                <p class="desc desc-item">
+                  Conversation with teachers or another students about task or
+                  any other thing
+                </p>
+              </div>
+              <div class="detail-feature">
+                <img
+                  src="/asset/icon/icon-feature-3.svg"
+                  alt="icon Task"
+                  class="icon-feature"
+                />
+                <h3 class="title-lv3">Task</h3>
+                <p class="desc desc-item">
+                  We give every of our students task for gathering knowledge at
+                  home
+                </p>
+              </div>
             </div>
-            <div class="detail-feature">
-              <img src="" alt="" class="icon-feature" />
-              <h3 class="title-lv3">Discuss</h3>
-              <p class="desc">
-                Conversation with teachers or another students about task or any
-                other thing
+          </div>
+        </div>
+      </div>
+      <!-- <==============courses==============> -->
+      <div class="courses">
+        <div class="main-content">
+          <div class="courses-body">
+            <span class="mini-summary">C O U R S E S</span>
+            <h2 class="title-lv2">Popular Courses</h2>
+            <div class="desc-view">
+              <p class="desc desc-courses">
+                Check out our most poular courses that suit for you. Here you
+                can find your favourite one.
               </p>
+              <a href="#!" class="view-all">View All Courses</a>
             </div>
-            <div class="detail-feature">
-              <img src="" alt="" class="icon-feature" />
-              <h3 class="title-lv3">Task</h3>
-              <p class="desc">
-                We give every of our students task for gathering knowledge at
-                home
-              </p>
+            <div class="courses-list">
+              <div class="courses-item">
+                <img
+                  src="/asset/img/Web Design.jpg"
+                  alt="Web Design"
+                  class="img-courses"
+                />
+                <div class="block-courses-item">
+                  <div class="wrap-detail">
+                    <a href="#!" class="title-courses">Web Design</a>
+                    <div class="block-fee">
+                      <span class="fee-text">Fee</span>
+                      <span class="fee">$200</span>
+                    </div>
+                    <p class="desc-courses">Web design basic to higher level</p>
+                    <div class="courses-stat">
+                      <span class="detail-courses">40 Classes</span>
+                      <span class="detail-courses">3 Months</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="courses-item">
+                <img
+                  src="/asset/img/Web Development.jpg"
+                  alt="Web Development"
+                  class="img-courses"
+                />
+                <div class="block-courses-item">
+                  <div class="wrap-detail">
+                    <a href="#!" class="title-courses">Web Development</a>
+                    <div class="block-fee">
+                      <span class="fee-text">Fee</span>
+                      <span class="fee">$250</span>
+                    </div>
+                    <p class="desc-courses">
+                      Web development basic to higher level
+                    </p>
+                    <div class="courses-stat">
+                      <span class="detail-courses">30 Classes</span>
+                      <span class="detail-courses">3 Months</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="courses-item">
+                <img
+                  src="/asset/img/UIUX Design.jpg"
+                  alt="UI/UX Design"
+                  class="img-courses"
+                />
+                <div class="block-courses-item">
+                  <div class="wrap-detail">
+                    <a href="#!" class="title-courses">UI/UX Design</a>
+                    <div class="block-fee">
+                      <span class="fee-text">Fee</span>
+                      <span class="fee">$350</span>
+                    </div>
+                    <p class="desc-courses">
+                      UI/UX design basic to higher level
+                    </p>
+                    <div class="courses-stat">
+                      <span class="detail-courses">50 Classes</span>
+                      <span class="detail-courses">4 Months</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <==============countdown==============> -->
+      <div class="countdown">
+        <div class="main-content">
+          <div class="countdown-body">
+            <div class="countdown-item">
+              <strong class="value">100+</strong>
+              <p class="desc">Popular Courses</p>
+            </div>
+            <div class="countdown-item">
+              <strong class="value">500+</strong>
+              <p class="desc">Skilled Trainer</p>
+            </div>
+            <div class="countdown-item">
+              <strong class="value">1M+</strong>
+              <p class="desc">Student Learning</p>
             </div>
           </div>
         </div>
