--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="" class="btn btn-hl">Get Started</a>
                 <button class="btn-play">
                   <img
-                    src="/asset/icon/icon-play.svg"
+                    src="./asset/icon/icon-play.svg"
                     alt="button play"
                     class="play"
                   />
