--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/asset/css/style.css" />
+    <link rel="stylesheet" href="./asset/css/style.css" />
     <title>Document</title>
   </head>
   <body style="height: 10000px">
@@ -47,7 +47,7 @@
                 <span>world-class platform.</span>
               </p>
               <div class="foot-hl">
-                <a href="" class="btn btn-hl">Get Started</a>
+                <a href="#!" class="btn btn-hl">Get Started</a>
                 <button class="btn-play">
                   <img
                     src="./asset/icon/icon-play.svg"
@@ -60,35 +60,35 @@
             <!-- <==============hero-right==============> -->
             <div class="hero-right">
               <img
-                src="/asset/img/Image-hero.png"
+                src="./asset/img/Image-hero.png"
                 alt="Image hero"
                 class="img-hr"
               />
               <div class="stat-courses-hr">
                 <div class="icon">
-                  <img src="/asset/icon/Book.svg" alt="icon book" />
+                  <img src="./asset/icon/Book.svg" alt="icon book" />
                 </div>
                 <span class="detail-label">Courses 1000+</span>
               </div>
               <div class="stat-schedules-hr">
                 <span class="detail-label">Schedules</span>
                 <img
-                  src="/asset/icon/Schedules-1.svg"
+                  src="./asset/icon/Schedules-1.svg"
                   alt="Schedules icon"
                   class="icon-stat"
                 />
                 <img
-                  src="/asset/icon/Schedules-2.svg"
+                  src="./asset/icon/Schedules-2.svg"
                   alt="Schedules icon"
                   class="icon-stat"
                 />
                 <img
-                  src="/asset/icon/Schedules-3.svg"
+                  src="./asset/icon/Schedules-3.svg"
                   alt="Schedules icon"
                   class="icon-stat"
                 />
                 <img
-                  src="/asset/icon/Schedules-4.svg"
+                  src="./asset/icon/Schedules-4.svg"
                   alt="Schedules icon"
                   class="icon-stat"
                 />
@@ -97,27 +97,27 @@
                 <span class="detail-label">Our Active Students</span>
                 <div class="avatar-list">
                   <img
-                    src="/asset/icon/avatar-1.svg"
+                    src="./asset/icon/avatar-1.svg"
                     alt="avatar"
                     class="avtar"
                   />
                   <img
-                    src="/asset/icon/avatar-2.svg"
+                    src="./asset/icon/avatar-2.svg"
                     alt="avatar"
                     class="avatar"
                   />
                   <img
-                    src="/asset/icon/avatar-3.svg"
+                    src="./asset/icon/avatar-3.svg"
                     alt="avatar"
                     class="avatar"
                   />
                   <img
-                    src="/asset/icon/avatar-4.svg"
+                    src="./asset/icon/avatar-4.svg"
                     alt="avatar"
                     class="avatar"
                   />
                   <img
-                    src="/asset/icon/avatar-5.svg"
+                    src="./asset/icon/avatar-5.svg"
                     alt="avatar"
                     class="avatar"
                   />
@@ -142,7 +142,7 @@
             <div class="feature-list">
               <div class="detail-feature">
                 <img
-                  src="/asset/icon/icon-feature-1.svg"
+                  src="./asset/icon/icon-feature-1.svg"
                   alt="icon Live Class"
                   class="icon-feature"
                 />
@@ -153,7 +153,7 @@
               </div>
               <div class="detail-feature">
                 <img
-                  src="/asset/icon/icon-feature-2.svg"
+                  src="./asset/icon/icon-feature-2.svg"
                   alt="icon Discuss"
                   class="icon-feature"
                 />
@@ -165,7 +165,7 @@
               </div>
               <div class="detail-feature">
                 <img
-                  src="/asset/icon/icon-feature-3.svg"
+                  src="./asset/icon/icon-feature-3.svg"
                   alt="icon Task"
                   class="icon-feature"
                 />
@@ -195,7 +195,7 @@
             <div class="courses-list">
               <div class="courses-item">
                 <img
-                  src="/asset/img/Web Design.jpg"
+                  src="./asset/img/Web Design.jpg"
                   alt="Web Design"
                   class="img-courses"
                 />
@@ -216,7 +216,7 @@
               </div>
               <div class="courses-item">
                 <img
-                  src="/asset/img/Web Development.jpg"
+                  src="./asset/img/Web Development.jpg"
                   alt="Web Development"
                   class="img-courses"
                 />
@@ -239,7 +239,7 @@
               </div>
               <div class="courses-item">
                 <img
-                  src="/asset/img/UIUX Design.jpg"
+                  src="./asset/img/UIUX Design.jpg"
                   alt="UI/UX Design"
                   class="img-courses"
                 />
