--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="./asset/css/style.css" />
     <title>Document</title>
   </head>
-  <body style="height: 10000px">
+  <body>
     <!-- <==============header==============> -->
     <header class="header fixed">
       <div class="main-content">
         <div class="header-body">
-          <img src="/asset/icon/Logo.svg" alt="logo-web" class="logo" />
+          <img src="./asset/icon/Logo.svg" alt="logo-web" class="logo" />
           <nav>
             <a href="#!">Home</a>
             <a href="#!">Features</a>
@@ -283,6 +283,167 @@
           </div>
         </div>
       </div>
+      <!-- <==============feedback==============> -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-body">
+            <!-- <==============feedback-left==============> -->
+            <div class="feedback-left">
+              <img
+                src="./asset/icon/quote.svg"
+                alt="icon quote"
+                class="img-quote"
+              />
+
+              <p class="desc">
+                “They are the best people. And this is the suitable platform to
+                learn from distance.”
+              </p>
+
+              <div class="sign"><strong>Ben Foakes</strong>, student.</div>
+              <div class="icon-button">
+                <button>
+                  <img src="./asset/icon/Vector left.svg" alt="vector left" />
+                </button>
+                <button>
+                  <img src="./asset/icon/Vector right.svg" alt="vector right" />
+                </button>
+              </div>
+            </div>
+            <!-- <==============feedback-right==============> -->
+            <div class="feedback-right">
+              <img
+                src="./asset/img/avatar-fb-1.jpg"
+                alt="avatar 1"
+                class="ava-fb ava-fb-1"
+              />
+              <img
+                src="./asset/img/ava-fb-2.jpg"
+                alt="avatar 2"
+                class="ava-fb ava-fb-2"
+              />
+              <img
+                src="./asset/img/ava-fb-3.jpg"
+                alt="avatar 3"
+                class="ava-fb ava-fb-3"
+              />
+              <img
+                src="./asset/img/ava-fb-4.jpg"
+                alt="avatar 4"
+                class="ava-fb ava-fb-4"
+              />
+              <img
+                src="./asset/img/ava-fb-5.jpg"
+                alt="avatar 5"
+                class="ava-fb ava-fb-5"
+              />
+              <img
+                src="./asset/img/ava-fb-6.jpg"
+                alt="avatar 6"
+                class="ava-fb ava-fb-6"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <==============cta-account==============> -->
+      <div class="cta-account">
+        <div class="main-content">
+          <div class="cta-account-body">
+            <div class="cta-text">
+              <h2 class="title-lv2">Ready to Get Admit</h2>
+              <p class="desc">Create your account and Boost your Career.</p>
+            </div>
+            <button class="btn btn-cta">Get Started</button>
+          </div>
+        </div>
+      </div>
     </main>
+    <!-- <==============footer==============> -->
+    <footer>
+      <div class="footer">
+        <div class="main-content">
+          <div class="footer-body">
+            <div class="foot-list">
+              <div class="foot-item item1">
+                <img src="./asset/icon/Logo.svg" alt="logo web" class="logo" />
+              </div>
+              <div class="foot-item item2">
+                <p href="#!" class="title-foot">Company</p>
+                <div class="link-block">
+                  <a href="#!" class="desc-foot">About</a>
+                  <a href="#!" class="desc-foot">Careers</a>
+                  <a href="#!" class="desc-foot">Press</a>
+                </div>
+              </div>
+              <div class="foot-item item3">
+                <p href="#!" class="title-foot">Community</p>
+                <div class="link-block">
+                  <a href="#!" class="desc-foot">Team Plans</a>
+                  <a href="#!" class="desc-foot">Blog</a>
+                  <a href="#!" class="desc-foot">Students</a>
+                  <a href="#!" class="desc-foot">Schoolarships</a>
+                </div>
+              </div>
+              <div class="foot-item item4">
+                <p href="#!" class="title-foot">Teaching</p>
+                <div class="link-block">
+                  <a href="#!" class="desc-foot">Become a teacher</a>
+                  <a href="#!" class="desc-foot">Teaching academy</a>
+                </div>
+              </div>
+              <div class="foot-item item5">
+                <p href="#!" class="title-foot">Be social</p>
+                <div class="link-block">
+                  <div class="be-social">
+                    <div class="wrap-icon">
+                      <img
+                        src="./asset/icon/Twitter.svg"
+                        alt="Twitter"
+                        class="social"
+                      />
+                    </div>
+                    <a href="#!" class="desc-foot">Twitter</a>
+                  </div>
+                  <div class="be-social">
+                    <div class="wrap-icon">
+                      <img
+                        src="./asset/icon/Facebook.svg"
+                        alt="Facebook"
+                        class="social"
+                      />
+                    </div>
+                    <a href="#!" class="desc-foot">Facebook</a>
+                  </div>
+                  <div class="be-social">
+                    <div class="wrap-icon">
+                      <img
+                        src="./asset/icon/Instagram.svg"
+                        alt="Instagram"
+                        class="social"
+                      />
+                    </div>
+                    <a href="#!" class="desc-foot">Instagram</a>
+                  </div>
+                  <div class="be-social">
+                    <div class="wrap-icon">
+                      <img
+                        src="./asset/icon/Linkedin.svg"
+                        alt="Linkedin"
+                        class="social"
+                      />
+                    </div>
+                    <a href="#!" class="desc-foot">Linkedin</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p class="desc copyright">
+              © Copyright 2020 by Mayad Ahmed. All right reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
